@@ -119,6 +119,16 @@
 	  </td>
 	</tr>
 
+		
+	<tr>
+	  <td>Ontwikkeling</td>
+	  <td>2.7.x</td>
+	  <td>
+	    <a href="../doc/v2.7/Documentation/out-www/">Documentatie</a>,
+	    <a href="install/#2.7">download</a>.
+	  </td>
+	</tr>
+
 	<tr>
 	  <td>Oud</td>
 	  <td>2.4.6</td>
